yaml_parser/tests/fail/colon-followed-by-comma.snap
---
source: yaml_parser/tests/fail.rs
---
parse error at line 2, column 4
  |
2 | - :,
  |    ^
expected `...`
